--- a/app-android/app/src/main/AndroidManifest.xml
+++ b/app-android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="SelfProfile"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SelfProfile">
+        android:theme="@style/Theme.SelfProfile"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".PostFullscreenActivity"
@@ -30,7 +31,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
